backend/infrastructure/k8s/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carbon-backend-dp
  annotations:
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: carbon-backend-basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
  labels:
    app: carbon-backend-dp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carbon-backend-dp
  template:
    metadata:
      labels:
        app: carbon-backend-dp
    spec:
      imagePullSecrets:
        - name: regscaleway
      containers:
        - name: carbon-backend-dp
          image: rg.fr-par.scw.cloud/carbon/carbon-backend:develop
          imagePullPolicy: Always
