backend/infrastructure/k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carbon-backend-svc
  labels:
    app: carbon-backend-dp
spec:
  ports:
    - port: 19001
      targetPort: 8000
      protocol: TCP
  selector:
    app: carbon-backend-dp
